@@ -8,6 +8,7 @@
     \item Before converting via \code{lexical_cast}, assign to atomic
     type via template logic to avoid an UBSAN issue (\ghit{14})
     \item More robust initialization also considering NA.
+    \item More robust processing of non-finite input, returning NA.
   }
 }
 
